icedtea-web: Import version 1.5.1 from vendor.